k8s/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace : admin
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    targetPort: 3001
  selector:
    app: admin
  type: ClusterIP
